buttons gap fixed

--- a/css/desktop/lmoDroid/description.css
+++ b/css/desktop/lmoDroid/description.css
@@ -3,7 +3,7 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: start;
-    gap: 20px;
+    gap: 40px;
     padding: 80px 128px;
     box-sizing: border-box;
     .title{
